# mail-service

./: .gitignore  Cargo.toml  Dev.Dockerfile  Prod.Dockerfile  README.md  aarch64-run.sh  build-aarch64.sh  docker-compose.yml  run.sh  schema.psql  schema.sql
src/: api.rs  event_service.rs  handlers.rs  log_db_types.rs  mail_api.rs  mail_handlers.rs  mail_service.rs  main.rs  ses_aws.rs  utils.rs
