[package]
name = "mail-service"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
serde = { version = "1.0.149", features = ["derive"] }
mail-service-api = { version = "*", git = "https://github.com/innexgo/mail-service-api" }
serde_json = "1.0.89"
tokio-postgres = "0.7.7"
aws-sdk-sesv2 = "0.21.0"
aws-types = "0.51.0"
aws-config = "0.51.0"


