[package]
name = "mail-service"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
mail-service-api = { version = "*", git = "https://github.com/innexgo/mail-service-api" }
serde_json = "1.0.127"
tokio-postgres = "0.7.11"
aws-sdk-sesv2 = "1.42.0"
aws-types = "1.3.3"
aws-config = "1.5.5"
