[package]
name = "mail-service"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.7"
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
mail-service-api = { version = "*", git = "https://github.com/innexgo/mail-service-api" }
serde_json = "1.0.139"
tokio-postgres = "0.7.13"
aws-sdk-sesv2 = "1.68.0"
aws-types = "1.3.5"
aws-config = "1.5.17"
